reorganize projects
- implement save project with option to publish
- update project list and "my projects"
- add /user-projects to api
